--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "author": "ogiste",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
+    "babel-polyfill": "^6.26.0",
+    "express": "^4.17.1",
     "faker": "^4.1.0"
   }
 }
